--- a/public.css
+++ b/public.css
@@ -5,11 +5,16 @@
     padding: 10px;
 }
 .container p {
-    padding-left: 10px;
+    padding-left: 20px;
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 35px;
 }
 .flex { 
     display: flex;
     margin-bottom: 50px;
+    padding: 20px 10px;
+    border-bottom: 1px solid #BCBCBC;
 }
 .item { 
     width:100px; 
